--- a/data/feats/ancestry-13-XJfUj2o4HdL5waZL.htm
+++ b/data/feats/ancestry-13-XJfUj2o4HdL5waZL.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You physically help an ally remain standing and encourage them to push through their pain against dire odds.
-Avantage: Vous aidez physiquement un allié à rester debout et l'encouragez à surmonter sa douleur contre vents et marées.
+Avantage: Un allié adjacent qui devrait être Mourant est simplement Blessé à 1 point de vie.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day<br /><strong>Trigger</strong> An adjacent and willing ally would be reduced to 0 HP but not killed.</p>
@@ -17,4 +17,4 @@ Avantage: Vous aidez physiquement un allié à rester debout et l'encouragez à 
 <p><strong>Déclencheur</strong> Un allié adjacent et volontaire devrait être réduit à 0 PV mais pas tué.</p>
 <hr />
 <p>Vous aidez physiquement un allié à rester debour et l'encouragez à surmonter leur douleur contre les présagesterribles.</p>
-<p>Votre allié ne sombre pas dans l'inconscience et reste à 1 Point de vie. L'allié obtient aussi un nombre de Points de vie temporaires égal à votre niveau qui dure pendant 1 minute. Continuer à se battre avec une telle blessure n'est pas sans conséquence ; la condition @Compendium[pf2e.conditionitems.Yl48xTdMh3aeQYL2]{Blesssé} de votre allié augmente de 1.</p>
+<p>Votre allié ne sombre pas dans l'inconscience et reste à 1 Point de vie. L'allié obtient aussi un nombre de Points de vie temporaires égal à votre niveau qui dure pendant 1 minute. Continuer à se battre avec une telle blessure n'est pas sans conséquence ; la condition @Compendium[pf2e.conditionitems.Yl48xTdMh3aeQYL2]{Blessé} de votre allié augmente de 1.</p>
