--- a/data/feats/ancestry-13-XzTklOArNQle7rQP.htm
+++ b/data/feats/ancestry-13-XzTklOArNQle7rQP.htm
@@ -2,12 +2,11 @@ Name: Invisible Trickster
 Nom: Mystificateur invisible
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You have learned how to become invisible and remain so.
-Avantage: Vous avez appris à devenir invisible et à le rester.
+Avantage: Vous pouvez lancer Invisibilité au niveau 4 une fois par heure.
 
 ------ Description (en) ------
 <p>You have learned how to become invisible and remain so. You can cast 4th-level @Compendium[pf2e.spells-srd.XXqE1eY3w3z6xJCB]{Invisibility} as a primal innate spell once per hour.</p>
