--- a/data/feats/ancestry-13-Z15QFC45psi0txWg.htm
+++ b/data/feats/ancestry-13-Z15QFC45psi0txWg.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You focus on your protean forebears to change your energy resistance.
-Avantage: Vous vous concentrez sur vos ancêtres protéiformes pour changer votre résistance énergétique.
+Avantage: Une fois par heure, après avoir subi des dégâts d'énergie, Vous modifiez l'élément auquel vous résistez.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per hour</p>
@@ -17,4 +17,5 @@ Avantage: Vous vous concentrez sur vos ancêtres protéiformes pour changer votr
 <p><strong>Fréquence</strong> une fois par heure</p>
 <p><strong>Déclencheur</strong> Vous subissez des dégâts d'acide, d'électricité ou de son.</p>
 <hr />
-<p>Vous vous concentrez sur vos géniteurs protéens pour changer votre résistance à l'énergie. La résistance à l'énergie que vous avez obtenu de votre héritage ganzi change pour correspondre aux dégâts déclencheurs. Ce changement survient après avoir subi les dégâts.</p>
+<p>Vous vous concentrez sur vos géniteurs protéens pour changer votre résistance à l'énergie.</p>
+<p>La résistance à l'énergie que vous avez obtenu de votre héritage ganzi change pour correspondre aux dégâts déclencheurs. Ce changement survient après avoir subi les dégâts.</p>
