--- a/data/feats/ancestry-13-ZlPCQ3Qh1cgS9r87.htm
+++ b/data/feats/ancestry-13-ZlPCQ3Qh1cgS9r87.htm
@@ -6,9 +6,10 @@ PrereqFR: Fouleur d'eau
 
 ------ Benefits and spoiler ----
 Benefits: You condense the moisture in the air, solidifying it so it can hold your weight.
-Avantage: Vous condensez l'humidité de l'air, le solidifiant pour qu'il puisse supporter votre poids.
+Avantage: Vous pouvez utiliser Fouleur d'eau pour monter ou descendre dans l'air.
 
 ------ Description (en) ------
 <p>You condense the moisture in the air, solidifying it so it can hold your weight. When you use Water Strider, you can walk on air. You can ascend and descend at a maximum of a 45-degree angle. You still fall at the end of your movement if you don’t end on a surface that can support you, as normal for Water Strider.</p>
 ------ Description (fr) ------
-<p>Vous condensez l'humidité de l'air, la solidifiant de manière à ce qu'elle puisse supporter votre poids. Lorsque fvous utlisez Fouleur d'eau, vous pouvez marcher dans les airs. Vous pouvez monter ou descendre à un angle maximum de 45 degrés. Vous chutez toujours à la fin de votre déplacement si vous ne terminez pas sur une surface qui peut vous supporter, comme d'ordinaire avec Fouleur d'eau.</p>
+<p>Vous condensez l'humidité de l'air, la solidifiant de manière à ce qu'elle puisse supporter votre poids.</p>
+<p>Lorsque fvous utilisez Fouleur d'eau, vous pouvez marcher dans les airs. Vous pouvez monter ou descendre à un angle maximum de 45 degrés. Vous chutez toujours à la fin de votre déplacement si vous ne terminez pas sur une surface qui peut vous supporter, comme à l'ordinaire en utilisant Fouleur d'eau.</p>
