--- a/data/feats/ancestry-13-XOudHBESJ192FBwF.htm
+++ b/data/feats/ancestry-13-XOudHBESJ192FBwF.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You surround your body with a thin layer of water drawn from the moisture in the air.
-Avantage: Vous entourez votre corps d'une fine couche d'eau puisée dans l'humidité de l'air.
+Avantage: Vous n'avez plus besoin d'immerger votre corps dans l'eau.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,4 +15,4 @@ Avantage: Vous entourez votre corps d'une fine couche d'eau puisée dans l'humid
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vous entourez votre corps avec une fine couche d'eau tirée de l'humidité de l'air. Vous pouvez passer une heure à vous reposer pour réhydrater vos branchies et votre peau , ce qui compte comme submerger votrecorps dans l'eau. À la discrétion du MJ, les zones incroyablement sèches, tels que les déserts, pourraient ne pas avoir assez d'humidité dans l'air pour que votre Réhydratation fonctionne.</p>
+<p>Vous entourez votre corps avec une fine couche d'eau tirée de l'humidité de l'air. Vous pouvez passer une heure à vous reposer pour réhydrater vos branchies et votre peau, ce qui est considéré comme submerger votre corps dans l'eau. À la discrétion du MJ, les zones incroyablement sèches, tels que les déserts, pourraient ne pas avoir assez d'humidité dans l'air pour que votre Réhydratation fonctionne.</p>
