--- a/data/feats/ancestry-13-XPVqOtHLN6jduHYs.htm
+++ b/data/feats/ancestry-13-XPVqOtHLN6jduHYs.htm
@@ -6,7 +6,7 @@ PrereqFR: Familiarité avec les armes hobgobelines
 
 ------ Benefits and spoiler ----
 Benefits: You increase your training in battlefield weapons.
-Avantage: Vous augmentez votre formation aux armes du champ de bataille.
+Avantage: Votre rang de maîtrise avec les armes s'étend aux armes hobgobelines.
 
 ------ Description (en) ------
 <p>You increase your training in battlefield weapons. Whenever you gain a class feature that grants you expert or greater proficiency in certain weapons, you also gain that proficiency rank in all weapons you are trained in from Hobgoblin Weapon Familiarity.</p>
