--- a/data/feats/ancestry-13-YryDlMt3zARg6j7T.htm
+++ b/data/feats/ancestry-13-YryDlMt3zARg6j7T.htm
@@ -2,12 +2,11 @@ Name: Arise, Ye Worthy!
 Nom: Relevez vous, Valeureux !
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You are descended from the valkyries who protect worthy souls, and can hold back death's grasp.
-Avantage: Vous descendez des valkyries qui protègent les âmes dignes et peuvent retenir l'emprise de la mort.
+Avantage: Vous pouvez lancer Souffle de vie une fois par jour.
 
 ------ Description (en) ------
 <p>You are descended from the valkyries who protect worthy souls, and can hold back death’s grasp. You can cast @Compendium[pf2e.spells-srd.Hnc7eGi7vyZenAIm]{Breath of Life} as a divine innate spell once per day.</p>
