--- a/data/feats/ancestry-13-xTLy2AyVW90TrQk6.htm
+++ b/data/feats/ancestry-13-xTLy2AyVW90TrQk6.htm
@@ -6,9 +6,9 @@ PrereqFR: Fortification élémentaire
 
 ------ Benefits and spoiler ----
 Benefits: You gain resistance 10 from Elemental Bulwark instead of 5.
-Avantage: Vous gagnez une résistance de 10 à partir de Bulwark élémentaire au lieu de 5.
+Avantage: Fortification élémentaire vous accorde une résistance élémentaire de 10.
 
 ------ Description (en) ------
 <p>You gain resistance 10 from Elemental Bulwark instead of 5.</p>
 ------ Description (fr) ------
-<p>Vous obtenez une résistance de 10 de Fortification élémentaire au lieu de 5.</p>
+<p>Fortification élémentaire vous accorde une résistance élémentaire de 10.</p>
