--- a/data/feats/class-10-kQEIPYoKTt69yXxV.htm
+++ b/data/feats/class-10-kQEIPYoKTt69yXxV.htm
@@ -2,12 +2,11 @@ Name: Mirror Shield
 Nom: Bouclier miroir
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You reflect the spell back against the triggering opponent.
-Avantage: Vous renvoyez le sort contre l'adversaire qui l'a déclenché.
+Avantage: Votre bouclier renvoie le sort à l'adversaire qui vous a pris pour cible.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> An opponent casting a spell that targets you critically fails a spell attack roll against your AC.</p>
