--- a/data/feats/class-08-Jj6sVfIX81tgvSY4.htm
+++ b/data/feats/class-08-Jj6sVfIX81tgvSY4.htm
@@ -2,12 +2,11 @@ Name: Wind Caller
 Nom: Celui qui appelle le vent
 PrereqEN: storm order
 PrereqFR: ordre de la tempête
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You bid the winds to lift and carry you through the air.
-Avantage: Vous demandez aux vents de vous soulever et de vous transporter dans les airs.
+Avantage: Vous obtenez le sort d’ordre Vol de l’ouragan et augmentez le nombre de point de focalisation de 1.
 
 ------ Description (en) ------
 <p>You bid the winds to lift and carry you through the air. You gain the @Compendium[pf2e.spells-srd.gSFg9zKwgcNZLMEs]{Stormwind Flight} order spell. Increase the number of Focus Points in your focus pool by 1.</p>
