--- a/data/feats/class-06-3vjOXL9ZD4ibaJL6.htm
+++ b/data/feats/class-06-3vjOXL9ZD4ibaJL6.htm
@@ -2,8 +2,7 @@ Name: Green Empathy
 Nom: Empathie végétale
 PrereqEN: leaf order
 PrereqFR: ordre de la feuille
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You can communicate with plants on a basic level and use Diplomacy to Make an Impression on them and to make very simple Requests of them.
