--- a/data/feats/class-08-JHJBmiyILzWdFRJO.htm
+++ b/data/feats/class-08-JHJBmiyILzWdFRJO.htm
@@ -2,12 +2,11 @@ Name: Advanced Deity's Domain
 Nom: Domaine avancé de la divinité
 PrereqEN: Deity's Domain
 PrereqFR: Domaine de la divinité
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Through your conviction, you have glimpsed the deeper secrets of your deity’s domain.
-Avantage: Grâce à votre conviction, vous avez entrevu les secrets les plus profonds du domaine de votre divinité.
+Avantage: Vous gagnez un sort de domaine avancé du domaine choisi et obtenez un point de focalisation.
 
 ------ Description (en) ------
 <p>Through your conviction, you have glimpsed the deeper secrets of your deity's domain. You gain an advanced domain spell from the domain you chose with Deity's Domain. You can cast that spell as a devotion spell. Increase the number of Focus Points in your focus pool by 1.</p>
