--- a/data/feats/class-12-U4AoJMBhJaFq5O1S.htm
+++ b/data/feats/class-12-U4AoJMBhJaFq5O1S.htm
@@ -1,17 +1,14 @@
 Name: Champion's Sacrifice
 Nom: Sacrifice du Champion
 PrereqEN: tenets of good
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: principes du bien
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You can suffer so that others might live.
-Avantage: Vous pouvez souffrir pour que d'autres puissent vivre.
+Avantage: Vous pouvez lancer le sort de dévotion Sacrifice du champion.
 
 ------ Description (en) ------
 <p>You can suffer so that others might live. You can cast the @Compendium[pf2e.spells-srd.USM530HlzZ1RMd99]{Champion's Sacrifice} devotion spell. Increase the number of Focus Points in your focus pool by 1.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> @Compendium[pf2e.classfeatures.nxZYP3KGfTSkaW6J]{principes du bien}</p>
-<hr>
-<p>Vous endurez les souffrances d’autrui pour qu’ils puissent vivre. Vous pouvez lancer le sort de dévotion @Compendium[pf2e.spells-srd.USM530HlzZ1RMd99]{sacrifice du champion}. Augmentez de 1 le nombre de points de focalisation de votre réserve.</p>
+<p>Vous endurez les souffrances d’autrui pour qu’ils puissent vivre. Vous pouvez lancer le sort de dévotion @Compendium[pf2e.spells-srd.USM530HlzZ1RMd99]{Sacrifice du champion}. Augmentez de 1 le nombre de points de focalisation de votre réserve.</p>
