--- a/data/equipment/consumable-02-p3RduziOxQxtREg9.htm
+++ b/data/equipment/consumable-02-p3RduziOxQxtREg9.htm
@@ -1,7 +1,6 @@
 Name: Looter's Lethargy
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Poison Torpeur du Pilleur
+État: libre
 
 ------ Description (en) ------
 <p>Traps may keep many a thief at bay, but the poison known as looter's lethargy ensures that no thieves are strong enough to walk off with pilfered treasures. Commonly smeared on locks, chests, and even valuable items themselves, the poison slowly saps the strength of those who touch it. Nearby guardians can then simply follow the resulting trail of discarded valuables to find the weakened trespasser.</p>
@@ -14,12 +13,12 @@ Nom:
 <p><strong>Stage 2</strong> @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Flat-Footed}, reduce Bulk limit by 4 (10 minutes)</p>
 <p><strong>Stage 3</strong> flat-footed, reduce Bulk limit by 5 (10 minutes)</p>
 ------ Description (fr) ------
-Les pièges peuvent tenir en échec de nombreux voleurs, mais le poison connu sous le nom de léthargie du pilleur garantit qu'aucun voleur n'est assez fort pour partir avec les trésors volés. Communément étalé sur les serrures, les coffres et même les objets de valeur, le poison sape lentement les forces de ceux qui le touchent. Les gardiens à proximité n'ont plus qu'à suivre la traînée d'objets de valeur abandonnés pour retrouver l'intrus affaibli.</p>
+Les pièges peuvent tenir en échec de nombreux voleurs, mais le poison connu sous le nom de Torpeur du Pilleur garantit qu'aucun voleur n'est assez fort pour partir avec les trésors volés. Généralement étalé sur les serrures, les coffres et même les objets de valeur, le poison sape lentement les forces de ceux qui le touchent. Les gardiens à proximité n'ont plus qu'à suivre la traînée d'objets de valeur abandonnés pour retrouver l'intrus affaibli.</p>
 <hr />
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact (Contact)</p>
-<p><strong>Jet de sauvegarde</strong> DC 19 Force</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir (Contact)</p>
+<p><strong>Jet de sauvegarde</strong> DD 19 Force</p>
 <p><strong>Début</strong> 1 minute</p>
 <p><strong>Durée maximale</strong> 1 heure</p>
-<p><strong>Étape 1</strong> réduire la limite de Vrac par 3 (1 minute)</p>
-<p><strong>Stade 2</strong> @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pieds plats}, réduction de la limite de volume de 4 (10 minutes)</p>
-<p><strong>Stade 3</strong> pieds plats, réduire la limite d'encombrement de 5 (10 minutes)</p>
+<p><strong>Stade 1</strong> réduire la limite de Vrac par 3 (1 minute)</p>
+<p><strong>Stade 2</strong> @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris-au-dépourvu}, réduction de la limite de volume de 4 (10 minutes)</p>
+<p><strong>Stade 3</strong> Pris-au-dépourvu, réduire la limite d'encombrement de 5 (10 minutes)</p>
