--- a/data/equipment/consumable-03-1Nez8K5C4fwgFrTz.htm
+++ b/data/equipment/consumable-03-1Nez8K5C4fwgFrTz.htm
@@ -1,7 +1,6 @@
 Name: Recording Rod (Basic)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Baguette d'Enregistrement
+État: libre
 
 ------ Description (en) ------
 <p>This smooth metal bar is short enough to fit in one hand. It has several inset gemstone buttons on one end and a small lens on the other. Popular with law enforcement and blackmailers alike, recording rods allow users to capture and replay incriminating scenes and are often concealed and triggered covertly to avoid raising the subject's suspicion.</p>
@@ -9,7 +8,7 @@ Nom:
 <p><strong>Effect</strong> When activated, the rod records anything it sees and hears for 1 minute. Its lens acts as both eye and ear with precise vision and imprecise hearing. This recorded sequence can then be played back as many times as desired, the sights and sounds communicated telepathically to the rod's holder. The rod's recording sequence can be triggered manually by a person holding it, or it can be programmed to begin recording automatically in response to a specified stimulus, such as nearby movement or a specific trigger word spoken in its vicinity.</p>
 <p>Once activated, the rod records for 1 minute, after which it loses its recording ability but can replay that same scene over and over.</p>
 ------ Description (fr) ------
-<p>Cette barre en métal lisse est assez courte pour tenir dans une main. Elle comporte plusieurs boutons en pierre précieuse insérés à une extrémité et une petite lentille à l'autre. Populaires auprès des forces de l’ordre et des maîtres chanteurs, les barres d’enregistrement permettent aux utilisateurs de capturer et de rejouer des scènes incriminantes. Elles sont souvent dissimulées et déclenchées secrètement pour éviter d’éveiller les soupçons du sujet.</p>
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact;</p>
-<p><strong>Effet</strong> Lorsqu'il est activé, le bâtonnet enregistre tout ce qu'il voit et entend pendant 1 minute. Sa lentille agit à la fois comme un œil et une oreille avec une vision précise et une audition imprécise. Cette séquence enregistrée peut ensuite être lue autant de fois que souhaité, les images et les sons étant communiqués par télépathie au détenteur de la baguette. La séquence d'enregistrement de la canne peut être déclenchée manuellement par la personne qui la tient, ou elle peut être programmée pour commencer à enregistrer automatiquement en réponse à un stimulus spécifique, comme un mouvement à proximité ou un mot déclencheur spécifique prononcé à proximité ;
-Une fois activée, la tige enregistre pendant une minute, après quoi elle perd sa capacité d'enregistrement mais peut rejouer la même scène encore et encore ;
+<p>Cette barre en métal lisse est assez courte pour tenir dans une main. Elle comporte plusieurs boutons en pierre précieuse insérés à une extrémité et une petite lentille à l'autre. Populaires auprès des forces de l’ordre et des maîtres chanteurs, les baguettes d'enregistrement permettent aux utilisateurs de capturer et de rejouer des scènes incriminantes. Elles sont souvent dissimulées et déclenchées secrètement pour éviter d’éveiller les soupçons du sujet.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
+<p><strong>Effet</strong> Lorsqu'il est activé, la baguette enregistre tout ce qu'il voit et entend pendant 1 minute. Sa lentille agit à la fois comme un œil et une oreille avec une vision précise et une audition imprécise. Cette séquence enregistrée peut ensuite être lue autant de fois que souhaité, les images et les sons étant communiqués par télépathie au détenteur de la baguette. La séquence d'enregistrement de la baguette peut être déclenchée manuellement par la personne qui la tient, ou elle peut être programmée pour commencer à enregistrer automatiquement en réponse à un stimulus spécifique, comme un mouvement à proximité ou un mot déclencheur spécifique prononcé à proximité.
+Une fois activée, la baguette enregistre pendant une minute, après quoi elle perd sa capacité d'enregistrement mais peut rejouer la même scène encore et encore.
