--- a/data/feats/ancestry-17-6NXlg11EeCqjOmSg.htm
+++ b/data/feats/ancestry-17-6NXlg11EeCqjOmSg.htm
@@ -6,7 +6,7 @@ PrereqFR: capacité à lancer guérison et mise à mal
 
 ------ Benefits and spoiler ----
 Benefits: Your connection to both life and undeath lets you twist the healing power of magic items to suit your own needs and aims.
-Avantage: Votre lien avec la vie et la mort vous permet de tordre le pouvoir de guérison des objets magiques pour répondre à vos propres besoins et objectifs.
+Avantage: Vous pouvez inverser les effets de Guérison et de Mise à mal des objets que vous activez.
 
 ------ Description (en) ------
 <p>Your connection to both life and undeath lets you twist the healing power of magic items to suit your own needs and aims. Whenever you Activate an Item to cast a @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{Heal} spell, you can invert its energy to produce the effects of an equivalent @Compendium[pf2e.spells-srd.wdA52JJnsuQWeyqz]{Harm} spell instead.</p>
