--- a/data/feats/ancestry-17-9eaUS0jJCpxuNXO5.htm
+++ b/data/feats/ancestry-17-9eaUS0jJCpxuNXO5.htm
@@ -6,7 +6,7 @@ PrereqFR: Férocité orque
 
 ------ Benefits and spoiler ----
 Benefits: You lash out viciously even as you fend off death.
-Avantage: Tu te déchaînes vicieusement même si tu repousses la mort.
+Avantage: Vous faites une Frappe au corps-à-corps lorsque vous faites usage de Férocité orque.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You use Orc Ferocity.</p>
@@ -15,6 +15,6 @@ Avantage: Tu te déchaînes vicieusement même si tu repousses la mort.
 <p>You lash out viciously even as you fend off death. Make a single melee Strike. If this Strike brings a foe to 0 Hit Points, this activation of Orc Ferocity doesn't count against its frequency.</p></section>
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Vous utilisez Férocité orque</p>
-<hr />
+<hr/>
 <p>Vous vous déchainez vicieusement même lorsque vous repoussez la mort.</p>
 <p>Faites une unique Frappe au corps-à-corps. Si cette Frappe amène un ennemi à 0 Points de vie, cette activation de Férocité orque n'est pas décomptée de sa fréquence d'utilisation.</p>
