--- a/data/feats/ancestry-17-ABXUfGoeBgCyFasg.htm
+++ b/data/feats/ancestry-17-ABXUfGoeBgCyFasg.htm
@@ -6,7 +6,7 @@ PrereqFR: Forme au long nez
 
 ------ Benefits and spoiler ----
 Benefits: You take on the imposing form of a large, winged oni.
-Avantage: Vous prenez la forme imposante d'un grand oni ailé.
+Avantage: Votre Forme au long nez obtient les effets du sort de Vol et du sort Agrandissement.
 
 ------ Description (en) ------
 <p>You take on the imposing form of a large, winged oni.</p>
@@ -14,5 +14,5 @@ Avantage: Vous prenez la forme imposante d'un grand oni ailé.
 <p>This lasts for 5 minutes or until you shift out of your Long-Nosed Form, whichever happens first.</p>
 ------ Description (fr) ------
 <p>Vous prenez la forme d'un imposant oni ailé de taille Grande.</p>
-<p>Une fois par jour, dans le cadre de l'utilisation de Forme au long nez, vous gagnez aussi les avantage d'un sort d'@Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{Agrandissement} et de @Compendium[pf2e.spells-srd.A2JfEKe6BZcTG1S8]{Vol} de niveau 4.</p>
+<p>Une fois par jour, dans le cadre de l'utilisation de Forme au long nez, vous gagnez aussi les avantages d'un sort d'@Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{Agrandissement} et de @Compendium[pf2e.spells-srd.A2JfEKe6BZcTG1S8]{Vol} de niveau 4.</p>
 <p>Cela dure pendant 5 minutes ou jusqu'à ce que vous sortiez de votre forme à long nez, selon ce qui advient en premier.</p>
