--- a/data/feats/ancestry-17-2pYCGPCQDHD3o7Jz.htm
+++ b/data/feats/ancestry-17-2pYCGPCQDHD3o7Jz.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can call forth a blasphemous word from the fiendish realms to punish your foes.
-Avantage: Vous pouvez invoquer un mot blasphématoire des royaumes diaboliques pour punir vos ennemis.
+Avantage: Vous pouvez lancer Décret divin une fois par jour.
 
 ------ Description (en) ------
 <p>You can call forth a blasphemous word from the fiendish realms to punish your foes.</p>
