--- a/data/feats/ancestry-17-5qVCl5MwPcx0sS7T.htm
+++ b/data/feats/ancestry-17-5qVCl5MwPcx0sS7T.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You slip through your foe's opening.
-Avantage: Tu te glisses dans l'ouverture de ton ennemi.
+Avantage: Vous vous déplacez sans déclencher de réaction de la créature qui vous a manqué.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature misses you with a melee attack.</p>
@@ -15,4 +15,4 @@ Avantage: Tu te glisses dans l'ouverture de ton ennemi.
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Une créature vous manque avec une attaque au corps-à-corps.</p>
 <hr />
-<p>Vous vous glissez par l'ouverture créée par votre ennemi. Marchez rapidement jusqu'à votre Vitesse. Ce déplacement ne déclenche pas les réactions basées surr le déplacement provenant de la créature qui vous a manqué.</p>
+<p>Vous vous glissez par l'ouverture créée par votre ennemi. Marchez rapidement de votre Vitesse. Ce déplacement ne déclenche pas les réactions basées sur le déplacement provenant de la créature qui vous a manqué.</p>
