--- a/data/feats/ancestry-17-7YvOqcdp9Z0RALMp.htm
+++ b/data/feats/ancestry-17-7YvOqcdp9Z0RALMp.htm
@@ -6,7 +6,7 @@ PrereqFR: Légendaire en Discrétion
 
 ------ Benefits and spoiler ----
 Benefits: With a powerful talent for misdirection, you slip from your adversaries' notice so thoroughly you appear to be somewhere else.
-Avantage: Grâce à un talent puissant pour la diversion, vous échappez à l’attention de vos adversaires si bien que vous semblez être ailleurs.
+Avantage: Une fois par heure, lorsque vous réussissez à vous Cacher ou être Furtif, vous devenez invisible et vos ennemis vous pensent à un endroit précis.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong>: Once per hour.</p>
