--- a/data/feats/ancestry-17-7iB1yacjF9fG6Rvn.htm
+++ b/data/feats/ancestry-17-7iB1yacjF9fG6Rvn.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have been granted a sliver of the power of the yamaraj , the magistrates of the dead who agreed to allow duskwalkers to exist at all.
-Avantage: On vous a accordé une parcelle du pouvoir des yamaraj, les magistrats des morts qui ont accepté de permettre aux marcheurs du crépuscule d'exister.
+Avantage: Une fois par jour, vous pouvez projeter un cône de 9 m qui inflige 14d6 dégâts tranchants et 4d6 dégâts tranchants persistants.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,4 +15,5 @@ Avantage: On vous a accordé une parcelle du pouvoir des yamaraj, les magistrats
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vous vous êtes vu confié une parcelle du pouvoir des yamaraj, les magistrats des morts qui ont accepté que les crépusculaires puissent exister. Vous exhalez une explosion de vent glacial et d'insectes affamés. C'est un cône de 9 m qui inflige [[/r 14d6 #tranchants]] dégâts tranchants et [[/r 4d6 #dégâts tranchants persistants]] dégâts tranchants persistants (jet de Réflexes basique en utilisant le plus élevé entre votre DD de classe et votre DD de sort). En cas d'échec critique, les cibles deviennent aussi @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malades} 2.</p>
+<p>Vous vous êtes vu confié une parcelle du pouvoir des yamaraj, les magistrats des morts qui ont accepté que les crépusculaires puissent exister.</p>
+<p> Vous exhalez une explosion de vent glacial et d'insectes affamés. C'est un cône de 9 m qui inflige [[/r 14d6 #tranchants]] dégâts tranchants et [[/r 4d6 #dégâts tranchants persistants]] dégâts tranchants persistants (jet de Réflexes basique en utilisant le plus élevé entre votre DD de classe et votre DD de sort). En cas d'échec critique, les cibles deviennent aussi @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malades} 2.</p>
