--- a/data/feats/ancestry-17-8ZWMJYNgyH5zh1yH.htm
+++ b/data/feats/ancestry-17-8ZWMJYNgyH5zh1yH.htm
@@ -6,9 +6,10 @@ PrereqFR: Ailes d'air
 
 ------ Benefits and spoiler ----
 Benefits: Your wings are now a permanent part of your body.
-Avantage: Tes ailes sont maintenant une partie permanente de ton corps.
+Avantage: Vos ailes sont maintenant permanentes.
 
 ------ Description (en) ------
 <p>Your wings are now a permanent part of your body. You gain the effects of Wings of Air at all times rather than just once per day for 10 minutes.</p>
 ------ Description (fr) ------
-<p>Vos ailes sont maintenant une partie permanente de votre corps. Vous obtener les effets d'Ailes d'air tout le temps au lieu simplement d'une fois par jour pendant 10 minutes.</p>
+<p>Vos ailes sont maintenant une partie permanente de votre corps.</p>
+<p>Vous obtenez les effets d'Ailes d'air tout le temps au lieu simplement d'une fois par jour pendant 10 minutes.</p>
