--- a/data/feats/ancestry-17-bPPcPUZMlJ7m5lYq.htm
+++ b/data/feats/ancestry-17-bPPcPUZMlJ7m5lYq.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You conjure the force of the tides to gain a +4 circumstance bonus to AC until the end of your next turn.
-Avantage: Vous conjurez la force des marées pour obtenir un bonus de circonstances de +4 à la CA jusqu'à la fin de votre prochain tour.
+Avantage: Une fois par jour vous obtenez un bonus de circonstances de +4 à la CA pendant 5 rounds et vous en faites profiter vos alliés adjacents. Vous pouvez absorber 40 points de dégâts.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,4 +15,4 @@ Avantage: Vous conjurez la force des marées pour obtenir un bonus de circonstan
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vous conjurez la force des marées pour obtenir un bonus de circonstances de +4 à la CA jusqu'à la fin de votre prochain tour. Tout allié qui vous est adjacent pendant la durée obtient un bonus de circonstances de +2 à la CA tant qu'il vous reste adjacent. Vous pouvez Maintenir l'effet jusqu'à 5 rounds au maximum. Lorsqu'une créature qui reçoit un bonus de circonstance à la CA de Bouclier de la marée devrait subir des dégâts d'une attaque, par une réaction, vous pouvez réduire les dégâts à cette créature de 40 ; après l'avoir fait, Bouclier de la marée se termine.</p>
+<p>Vous conjurez la force des marées pour obtenir un bonus de circonstances de +4 à la CA jusqu'à la fin de votre prochain tour. Tout allié qui vous est adjacent pendant la durée obtient un bonus de circonstances de +2 à la CA tant qu'il vous reste adjacent. Vous pouvez Maintenir l'effet jusqu'à 5 rounds au maximum. Lorsqu'une créature qui reçoit un bonus de circonstances à la CA de Bouclier de la marée devrait subir des dégâts d'une attaque, par une réaction, vous pouvez réduire les dégâts infligés à cette créature de 40 ; après l'avoir fait, Bouclier de la marée se termine.</p>
