--- a/data/feats/ancestry-17-hkU92nqUYBQLQSMt.htm
+++ b/data/feats/ancestry-17-hkU92nqUYBQLQSMt.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You explode in flame.
-Avantage: Tu exploses en flammes.
+Avantage: Une fois par jour, dans un rayon de 6 m, vos ennemis subissent 7d6 dégats de feu et vos alliés sont Accélérés pendant 1 round.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day.</p>
@@ -17,4 +17,5 @@ Avantage: Tu exploses en flammes.
 <p><strong>Fréquence</strong> une fois par jour.</p>
 <p><strong>Déclencheur</strong> Votre tour débute.</p>
 <hr />
-<p>Vous explosez de flammes. Les ennemis dans une émanation de 6 m subissent [[/r 7d6 #feu]] dégâts de feu (jet de Réflexes basique en utilisant le plus élevé entre votre DD de classe et votre DD de sort). Les alliés dans la zone sont @Compendium[pf2e.conditionitems.nlCjDvLMf2EkV2dl]{Accélérés} pendant 1 round et peuvent utiliser l'action supplémentaire pour Frapper ou Marcher rapidement.</p>
+<p>Vous Vous enflammez.</p>
+<p>Vos ennemis dans une émanation de 6 m subissent [[/r 7d6 #feu]] dégâts de feu (jet de Réflexes basique en utilisant le plus élevé entre votre DD de classe et votre DD de sort). Les alliés dans la zone sont @Compendium[pf2e.conditionitems.nlCjDvLMf2EkV2dl]{Accélérés} pendant 1 round et peuvent utiliser l'action supplémentaire pour Frapper ou Marcher rapidement.</p>
