--- a/data/feats/ancestry-17-CuyuwFht0rVbGMca.htm
+++ b/data/feats/ancestry-17-CuyuwFht0rVbGMca.htm
@@ -6,7 +6,7 @@ PrereqFR: Ailes fiélones
 
 ------ Benefits and spoiler ----
 Benefits: Your wings are now a permanent part of your physiology.
-Avantage: Vos ailes font désormais partie intégrante de votre physiologie.
+Avantage: Vos ailes sont désormais permanentes.
 
 ------ Description (en) ------
 <p>Your wings are now a permanent part of your physiology. You gain the effects of Fiendish Wings at all times, rather than just once per day for 10 minutes.</p>
