--- a/data/feats/ancestry-17-DYFOlJlMoDuHjrZx.htm
+++ b/data/feats/ancestry-17-DYFOlJlMoDuHjrZx.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You tap into the Godmind's collective cognitive well, rapidly parsing near-infinite variables to read your surroundings.
-Avantage: Vous puisez dans le puits cognitif collectif du Godmind's, analysant rapidement des variables quasi infinies pour lire votre environnement.
+Avantage: Une fois par jour, vous obtenez les effets de Vision lucide dans les 18 m pendant 1 minute.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,4 +15,4 @@ Avantage: Vous puisez dans le puits cognitif collectif du Godmind's, analysant r
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vous puisez dans le puits de la connaissance collective de l'esprit divin, triant rapidement une quasi infinité de variables pour lire votre environnement. Pendant 1 minute, vous obtenez un sens précis de déplacementdans les 18 m, vous pouvez voir les objets et les créatures invisibles et vous obtenez les effets de @Compendium[pf2e.spells-srd.uqlxMQQeSGWEVjki]{Vision lucide} au niveau 9.</p>
+<p>Vous puisez dans le puits de la connaissance collective de l'esprit divin, triant rapidement une quasi infinité de variables pour lire votre environnement. Pendant 1 minute, vous obtenez un Perception des déplacements (précis) dans les 18 m, vous pouvez voir les objets et les créatures invisibles et vous obtenez les effets de @Compendium[pf2e.spells-srd.uqlxMQQeSGWEVjki]{Vision lucide} au niveau 9.</p>
