--- a/data/feats/ancestry-17-Dxac0mgye7EFFVou.htm
+++ b/data/feats/ancestry-17-Dxac0mgye7EFFVou.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your inherent glory radiates into the world with all the divine power of the celestial planes for 1 minute.
-Avantage: Votre gloire inhérente rayonne dans le monde avec toute la puissance divine des plans célestes pendant 1 minute.
+Avantage: Votre gloire vous masque ou vous cache aux yeux de vos adversaires durant une minute au maximum.
 
 ------ Description (en) ------
 <p>Your inherent glory radiates into the world with all the divine power of the celestial planes for 1 minute.</p>
@@ -17,7 +17,7 @@ Avantage: Votre gloire inhérente rayonne dans le monde avec toute la puissance 
 <p><strong>Failure</strong> As success, except you are concealed to the creature while your glory radiates.</p>
 <p><strong>Critical Failure</strong> You are @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Hidden} to the creature while your glory radiates, lost amid the radiant corona of your presence. Your general position is still obvious, so you can’t use this to Sneak.</p>
 ------ Description (fr) ------
-<p>Votre gloire intérieur irradie dans le monde avec tout le pouvoir divin des plans célestes pendant 1 minute.</p>
+<p>Votre gloire intérieur irradie dans le monde avec tout le pouvoir divin des plans célestes pendant une minute.</p>
 <p>Toute créature qui peut vous voir alors que vous irradiez le gloire doit tenter un jet de Volonté contre le plus élevé entre votre DD de classe ou votre DD de sort. La créature devient alors temporairement immunisée à cet effet pendant 24 heures.</p>
 <hr />
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
