--- a/data/feats/ancestry-17-FBhBnyGX0Uje0tbJ.htm
+++ b/data/feats/ancestry-17-FBhBnyGX0Uje0tbJ.htm
@@ -2,12 +2,11 @@ Name: Storm Form
 Nom: Forme tempêtueuse
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can transform into an elemental.
-Avantage: Vous pouvez vous transformer en un élémentaire.
+Avantage: Une fois par jour, vous pouvez lancer Forme élémentaire au niveau 7.
 
 ------ Description (en) ------
 <p>You can transform into an elemental. Once per day, you can cast @Compendium[pf2e.spells-srd.1K6AYGisvo9gqdhs]{Elemental Form} as a 7th-level primal innate spell, but you can only choose the air elemental form.</p>
