--- a/data/feats/ancestry-17-cayKGa2yK7Gwvk6m.htm
+++ b/data/feats/ancestry-17-cayKGa2yK7Gwvk6m.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have a connection to olethroses, the enigmatic psychopomps who successfully swayed the yamaraj to permit the creation of the first duskwalkers.
-Avantage: Vous avez un lien avec les olethroses, les énigmatiques psychopompes qui ont réussi à influencer les yamaraj pour qu'ils permettent la création des premiers duskwalkers.
+Avantage: Une fois par jour, une première Frappe en utilisant une arme du groupe des arcs inflige 60 points de dégâts supplémentaires du même type que ceux de l'attaque initiale.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -15,4 +15,4 @@ Avantage: Vous avez un lien avec les olethroses, les énigmatiques psychopompes 
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vous avez un lien avec les olethroses, les psychopompes énigmatiques qui ont réussi à balancer les yamaraj pour permettre la création des premiers crépusculaires. Vous placez un doigt sur les écailles du destin en enroulant de la soie autour de votre arc. La première fois au cours de ce tour que vous touchez une créature avec une Frappe en utilisant une arme du groupe des arcs que vous avez modifié de cette manière, cette créature subit [[/r 60]] dégâts supplémentaires (jet de Vigueur basique en utilisant le plus élevé entre votre DD de classe ou votre DD de sort) lorsque la flêche travaille à couper court à leur destin. Ces dégâts supplémentaires sont du même type que le type infligé par votre attaque initiale. Si vous touchez plus d'une créature en même temps, choisissez en une qui subit l'effet de votre décret.</p>
+<p>Vous avez un lien avec les olethroses, les psychopompes énigmatiques qui ont réussi à influencer les yamaraj pour permettre la création des premiers crépusculaires. Vous placez un doigt sur les plateaux de la balance du destin en enroulant de la soie autour de votre arc. La première fois au cours de ce tour que vous touchez une créature avec une Frappe en utilisant une arme du groupe des arcs que vous avez modifié de cette manière, cette créature subit 60 dégâts supplémentaires (jet de Vigueur basique en utilisant le plus élevé entre votre DD de classe ou votre DD de sort) lorsque la flêche travaille à couper court à leur destin. Ces dégâts supplémentaires sont du même type que le type infligé par votre attaque initiale. Si vous touchez plus d'une créature en même temps, choisissez en une qui subit l'effet de votre décret.</p>
