--- a/data/feats/ancestry-17-ffjoPXtAoIR2Drwe.htm
+++ b/data/feats/ancestry-17-ffjoPXtAoIR2Drwe.htm
@@ -6,9 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your command over your vital essence allows you or an ally to recover from grievous wounds.
-Avantage: Votre maîtrise de votre essence vitale vous permet, à vous ou à un allié, de vous remettre de blessures graves.
+Avantage: Vous pouvez lancer Régéneration au niveau 7 une fois par jour.
 
 ------ Description (en) ------
 <p>Your command over your vital essence allows you or an ally to recover from grievous wounds. You can cast @Compendium[pf2e.spells-srd.2Vkd1IxylPceUAAF]{Regenerate} as a 7th-level primal innate spell once per day.</p>
 ------ Description (fr) ------
-<p>Votre contrôle sur votre essence vitale vous permet ou permet à un allié de récupérer de graves blessures. Vous pouvez lancer @Compendium[pf2e.spells-srd.2Vkd1IxylPceUAAF]{Régéneration} de niveau 7 comme un sort inné primordial une fois par jour.</p>
+<p>Votre contrôle sur votre essence vitale vous permet ou permet à un allié de récupérer de graves blessures.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.2Vkd1IxylPceUAAF]{Régéneration} au niveau 7 comme un sort inné primordial une fois par jour.</p>
