--- a/data/feats/ancestry-17-fqw1ELaqavuKLHIj.htm
+++ b/data/feats/ancestry-17-fqw1ELaqavuKLHIj.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Despite a lifetime filled with questionable decisions, you've managed to survive, as though you have uncanny luck that lets you avoid the consequences of your own actions.
-Avantage: Malgré une vie remplie de décisions douteuses, vous avez réussi à survivre, comme si vous aviez une chance inouïe qui vous permet d'éviter les conséquences de vos propres actions.
+Avantage: Une fois par jour, pendant un tour, vos échecs et vos échecs critiques sont des succès et vous ne subissez que les dégâts minimaux de ces derniers.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -16,7 +16,7 @@ Avantage: Malgré une vie remplie de décisions douteuses, vous avez réussi à 
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>En dépit d'une vie emplie de décisions questionnables, vous avez réussi à survivre, comme si vous aviez une chance insolente vous permettant d'éviter les conséquences de vos propres actes.</p>
-<p>Pour le restant de votre tour, si vous obtenez un échec ou un échec critique sur un jet de sauvegarde contre un effet dommageable, vous obtenez un succès à la place. De plus, les ennemis et les dangers qui devraient vous endommager durant ce tour obtiennent le minimum possible des dégâts.</p>
-<p>Ces avantages ne s'appliquent qu'aux effets dommageables entièrement subis durant le tour au cours duquel vous activez Dangereux abandon, comme courir à travers un <a class="entity-link" data-pack="pf2e.spells-srd" data-id="iL6TujgTCtRRa0Y0" draggable="true"><i class="fas fa-suitcase"></i>Mur prismatique</a>.</p>
+<p>En dépit d'une vie emplie de décisions douteuses, vous avez réussi à survivre, comme si une chance insolente vous permettait d'éviter les conséquences de vos propres actes.</p>
+<p>Pour le restant de votre tour, si vous obtenez un échec ou un échec critique sur un jet de sauvegarde contre un effet dommageable, vous obtenez un succès à la place. De plus, les ennemis et les dangers qui devraient vous endommager durant ce tour obtiennent le minimum possible de dégâts.</p>
+<p>Ces avantages ne s'appliquent qu'aux effets dommageables entièrement subis durant le tour au cours duquel vous activez Dangereux abandon, comme courir à travers un @Compendium[pf2e.spells-srd.iL6TujgTCtRRa0Y0]{Mur prismatique}.</p>
 <p>Les dégâts persistants et les conditions qui s'appliquaient antérieurement à votre tour produisent leurs effets normalement et, dès que votre tour se termine, vous êtes de nouveau sujet aux entières conséquences de tous les dangers qui vous menacent encore.</p>
