--- a/data/feats/ancestry-17-iJrjzLnLJkvQgrbS.htm
+++ b/data/feats/ancestry-17-iJrjzLnLJkvQgrbS.htm
@@ -6,7 +6,7 @@ PrereqFR: Fouet de la tempête
 
 ------ Benefits and spoiler ----
 Benefits: Choose either lightning bolt or gust of wind .
-Avantage: Choisissez l'éclair ou la rafale de vent.
+Avantage: Une fois par jour, un coup critique avec une arme tranchante déclenche une Bourrasque ou un Éclair sur votre ennemi.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
