--- a/data/feats/ancestry-17-iVwsLYjOJbfvL0Pe.htm
+++ b/data/feats/ancestry-17-iVwsLYjOJbfvL0Pe.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: The blood of heroes courses through your veins, and you inspire your allies to dig deep and find a new level of resolve.
-Avantage: Le sang des héros coule dans vos veines, et vous inspirez vos alliés à creuser profondément et à trouver un nouveau niveau de détermination.
+Avantage: Une fois par jour, vous lancez Conviction zélée au niveau 6 sur 10 créatures dans les 9 m.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
