--- a/data/feats/ancestry-17-IzJ76OXe1gl2hfbd.htm
+++ b/data/feats/ancestry-17-IzJ76OXe1gl2hfbd.htm
@@ -6,9 +6,10 @@ PrereqFR: Invoquer les éléments
 
 ------ Benefits and spoiler ----
 Benefits: The elemental power in your blood is a raging storm.
-Avantage: Le pouvoir élémentaire dans votre sang est une tempête furieuse.
+Avantage: Vous pouvez Invoquer les éléments une fois par heure.
 
 ------ Description (en) ------
 <p>The elemental power in your blood is a raging storm. You can Invoke the Elements with a frequency of once per 10 minutes, rather than once per day.</p>
 ------ Description (fr) ------
-<p>Le pouvoir élémentaire dans votre sang est une tempête qui fait rage. Vous pouvez Invoquer les éléments avec une fréquence d'une fois toutes les 10 minutes, au lieu d'une fois par jour.</p>
+<p>Le pouvoir élémentaire dans votre sang est une tempête qui fait rage.</p>
+<p>Vous pouvez Invoquer les éléments avec une fréquence d'une fois toutes les 10 minutes, au lieu d'une fois par jour.</p>
