--- a/data/feats/ancestry-17-Qc9MH7wT182qasSV.htm
+++ b/data/feats/ancestry-17-Qc9MH7wT182qasSV.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: The energy that flows in your blood can save a life in the direst of times.
-Avantage: L'énergie qui circule dans votre sang peut sauver une vie dans les moments les plus difficiles.
+Avantage: Une fois par jour, vous faites bénéficier une cible mourante de Souffle de vie lui accordant 6d8 Pv + votre modificateur de constitution.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day<br /><strong>Trigger</strong> A living creature within 60 feet would die.</p>
@@ -16,4 +16,4 @@ Avantage: L'énergie qui circule dans votre sang peut sauver une vie dans les mo
 <p><strong>Fréquence</strong> une fois par jour</p>
 <p><strong>Déclencheur</strong> Une créature vivante dans les 18 m devrait mourir.</p>
 <hr />
-<p>L'énergie qui coule dans votre sang peut préserver une vie dans les temps les plus difficiles. La créature déclencheuse reçoit les effets de @Compendium[pf2e.spells-srd.Hnc7eGi7vyZenAIm]{Souffle de vie}, sauf qu'ils récupèrent un nombre de Points de vie égaux à  [[/r 6d8 #healing (plus votre mod. de Con)]] plus votre modificateur de Constitution.</p>
+<p>L'énergie qui coule dans votre sang peut préserver une vie dans les temps les plus difficiles. La créature déclencheuse reçoit les effets de @Compendium[pf2e.spells-srd.Hnc7eGi7vyZenAIm]{Souffle de vie}, sauf qu'ils récupèrent un nombre de Points de vie égaux à  [[/r 6d8 #soins (plus votre modificateur de Constitution)]] plus votre modificateur de Constitution.</p>
