--- a/data/feats/ancestry-17-nJRcbt72wRk5Rmc4.htm
+++ b/data/feats/ancestry-17-nJRcbt72wRk5Rmc4.htm
@@ -6,10 +6,10 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You call forth the blood of your foes to grant you vigor.
-Avantage: Vous appelez le sang de vos ennemis pour vous donner de la vigueur.
+Avantage: Une fois par jour, vous pouvez lancer Saignée du vampire au niveau 7.
 
 ------ Description (en) ------
 <p>You call forth the blood of your foes to grant you vigor. Once per day, you can cast @Compendium[pf2e.spells-srd.fd31tAHSSGXyOxW6]{Vampiric Exsanguination} as a 7th-level divine innate spell.</p>
 ------ Description (fr) ------
 <p>Vous puisez dans le sang de vos ennemis pour qu'il vous accorde de la vigueur.</p>
-<p>Une fois par jour, vous pouvez Lancer @Compendium[pf2e.spells-srd.fd31tAHSSGXyOxW6]{Saignée du vampire} comme un sort divin inné de niveau 7.</p>
+<p>Une fois par jour, vous pouvez Lancer @Compendium[pf2e.spells-srd.fd31tAHSSGXyOxW6]{Saignée du vampire} comme un sort divin inné au niveau 7.</p>
