--- a/data/feats/ancestry-17-QXZFvsZDduxwTJYM.htm
+++ b/data/feats/ancestry-17-QXZFvsZDduxwTJYM.htm
@@ -6,13 +6,13 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your people used powerful magic to travel between distant worlds, and the remnants of that magic make such transportation easier for you.
-Avantage: Votre peuple utilisait une puissante magie pour voyager entre des mondes éloignés, et les vestiges de cette magie vous facilitent ce type de transport.
+Avantage: Il ne coûte rien de vous téléporter et vous rendez plus sûre la téléportation.
 
 ------ Description (en) ------
 <p>Your people used powerful magic to travel between distant worlds, and the remnants of that magic make such transportation easier for you.</p>
 <p>When you are the target of a teleportation spell that transports more than one person, it can affect an additional person beyond the normal limit, chosen by the caster.</p>
 <p>Additionally, when you're the target of a @Compendium[pf2e.spells-srd.69L70wKfGDY66Mk9]{Teleport} spell, you and the other targets arrive no farther than 1 mile off target, regardless of distance traveled.</p>
 ------ Description (fr) ------
-<p>Votre peuple a utilisé une puissante magie pour voyager entre des mondes distants et les résidus de cette magie vous rendent un tel transport plus facile.</p>
+<p>Votre peuple a utilisé une puissante magie pour voyager entre des mondes distants et les résidus de cette magie vous facilitent un tel transport.</p>
 <p>Lorsque vous êtes la cible d'un sort de téléportation qui transporte plus d'une personne, il peut affecter une personne supplémentaire au delà de sa limite normale choisie par le lanceur.</p>
 <p>De plus, lorsque vous êtes la cible d'un sort de @Compendium[pf2e.spells-srd.69L70wKfGDY66Mk9]{Téléportation}, vous et les autres cibles n'arrivez pas à une distance de plus d'1,5 kilomètre de la destination, quelle que soit la distance parcourue.</p>
