--- a/data/feats/ancestry-17-QgNo1s6nVbKPU4St.htm
+++ b/data/feats/ancestry-17-QgNo1s6nVbKPU4St.htm
@@ -6,7 +6,7 @@ PrereqFR: Chance féline
 
 ------ Benefits and spoiler ----
 Benefits: You have gone well past nine lives to survive danger with surprising regularity.
-Avantage: Vous avez dépassé les neuf vies pour survivre au danger avec une régularité surprenante.
+Avantage: Vous pouvez utiliser Chance féline une fois par heure.
 
 ------ Description (en) ------
 <p>You have gone well past nine lives to survive danger with surprising regularity. You can use Cat's Luck once per hour, rather than once per day.</p>
