--- a/data/feats/ancestry-17-U9nJy5suyYDE0b20.htm
+++ b/data/feats/ancestry-17-U9nJy5suyYDE0b20.htm
@@ -2,12 +2,11 @@ Name: Flourish And Ruin
 Nom: Prospérer et ruiner
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can call upon the vital essence of your spirit to restore life to your allies and call forth vines to ensnare and bludgeon your foes.
-Avantage: Vous pouvez faire appel à l'essence vitale de votre esprit pour redonner vie à vos alliés et appeler des lianes pour piéger et matraquer vos ennemis.
+Avantage: Vous pouvez lancer Champ de vie et Entraves végétales au niveau 6 une fois par jour chacun.
 
 ------ Description (en) ------
 <p>You can call upon the vital essence of your spirit to restore life to your allies and call forth vines to ensnare and bludgeon your foes. You can cast @Compendium[pf2e.spells-srd.x5rGOmhDRDVQPrnW]{Field of Life} and @Compendium[pf2e.spells-srd.JbAcSLu62TU1OgNF]{Tangling Creepers} as 6th-level primal innate spells once per day each. You become an expert in primal spell attack rolls and primal spell DCs.</p>
