--- a/data/feats/ancestry-17-kt5UJEfTzO3LiInN.htm
+++ b/data/feats/ancestry-17-kt5UJEfTzO3LiInN.htm
@@ -2,14 +2,14 @@ Name: Crone's Cruelty
 Nom: Cruauté de vieille fille
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Filled with rancor and hate, you rend the minds of those who displease you.
-Avantage: Rempli de rancœur et de haine, vous déchirez l'esprit de ceux qui vous déplaisent.
+Avantage: Une fois par jour, vous pouvez lancer Déformer l'esprit.
 
 ------ Description (en) ------
 <p>Filled with rancor and hate, you rend the minds of those who displease you. You can cast @Compendium[pf2e.spells-srd.8kJbiBEjMWG4VUjs]{Warp Mind} once per day as an occult innate spell.</p>
 ------ Description (fr) ------
-<p> l'âme remplie de rancœur et de haine, vous déchirez les esprits de ceux qui vous déplaisent. Vous pouvez lancer @Compendium[pf2e.spells-srd.8kJbiBEjMWG4VUjs]{Déformer l'esprit} une fois par jour comme un sort inné occulte.</p>
+<p> l'âme remplie de rancœur et de haine, vous déchirez les esprits de ceux qui vous déplaisent.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.8kJbiBEjMWG4VUjs]{Déformer l'esprit} une fois par jour comme un sort inné occulte.</p>
