--- a/data/feats/ancestry-17-wfOGyLnuVMFo7Rwy.htm
+++ b/data/feats/ancestry-17-wfOGyLnuVMFo7Rwy.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have a powerful connection to the Boneyard and its courts, granting you the ability to travel to and from the Boneyard.
-Avantage: Vous avez un lien puissant avec le Boneyard et ses tribunaux, ce qui vous donne la possibilité de voyager vers et depuis le Boneyard.
+Avantage: Deux fois par semaine, vous Pouvez lancer Changement de plan pour voyager entre le Plan matériel et le Cimetière.
 
 ------ Description (en) ------
 <p>You have a powerful connection to the Boneyard and its courts, granting you the ability to travel to and from the Boneyard. You gain @Compendium[pf2e.spells-srd.5bTt2CvYHPvaR7QQ]{Plane Shift} as a divine innate spell. You can cast it twice per week.</p>
@@ -14,4 +14,4 @@ Avantage: Vous avez un lien puissant avec le Boneyard et ses tribunaux, ce qui v
 ------ Description (fr) ------
 <p>Vous disposez d'un lien puissant avec le Cimetière et ses cours, vous faisant bénéficier de la capacité de voyager jusqu'au Cimetière et d'en revenir.</p>
 <p>Vous obtenez @Compendium[pf2e.spells-srd.5bTt2CvYHPvaR7QQ]{Changement de plan} comme sort divin inné. Vous pouvez le lancer deux fois par semaine.</p>
-<p>Ce sort peut seulement être utilisé pour voyager vers le Cimetière ou du Cimetière vers le Plan Matériel. Compte tenu de votre connection unique avec le Cimetière, votre corps sert de focalisateur et vous n'avez pas besoin d'un diapason.</p>
+<p>Ce sort peut seulement être utilisé pour voyager vers le Cimetière ou du Cimetière vers le Plan Matériel. Compte tenu de votre lien unique avec le Cimetière, votre corps sert de focalisateur et vous n'avez pas besoin d'un diapason.</p>
