--- a/data/feats/ancestry-17-UKHIKipBvOGhzcSQ.htm
+++ b/data/feats/ancestry-17-UKHIKipBvOGhzcSQ.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: The connection between you and the First World resonates within your body stronger than it does for most gnomes, allowing you to cross the threshold between the Material Plane and the First World.
-Avantage: La connexion entre vous et le Premier Monde résonne dans votre corps plus fortement que pour la plupart des gnomes, ce qui vous permet de franchir le seuil entre le Plan Matériel et le Premier Monde.
+Avantage: Deux fois par semaine, vous pouvez lancer Changement de plan pour voyager entre le Plan matériel et le Premier monde.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> twice per week</p>
