--- a/data/feats/ancestry-17-UOL44Qm1rOVD5TFg.htm
+++ b/data/feats/ancestry-17-UOL44Qm1rOVD5TFg.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can cast volcanic eruption as a 7th-level primal innate spell once per day, except that you can only evoke the volcano on the floor of a body of water, and the effects that normally happen to flying creatures happen to swimming creatures instead.
-Avantage: Vous pouvez lancer éruption volcanique comme un sort inné primal de 7e niveau une fois par jour, sauf que vous ne pouvez évoquer le volcan que sur le sol d'une étendue d'eau, et les effets qui se produisent normalement pour les créatures volantes se produisent pour les créatures nageuses à la place.
+Avantage: Une fois par jour, vous pouvez lancer Éruption volcanique au niveau 7 sur les fonds marins.
 
 ------ Description (en) ------
 <p>You can cast @Compendium[pf2e.spells-srd.O7ZEqWjwdKyo2CUv]{Volcanic Eruption} as a 7th-level primal innate spell once per day, except that you can only evoke the volcano on the floor of a body of water, and the effects that normally happen to flying creatures happen to swimming creatures instead.</p>
 ------ Description (fr) ------
-<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.O7ZEqWjwdKyo2CUv]{Éruption volcanique} comme un sort primordial inné de niveau 7 une fois par jour, sauf que vous évoquéer seulement le volcan sur le fond d'une étendue d'eau et que les effets qui s'appliquent normalement aux créatures volantes s'appliquent aux créatures qui nagent à la place.</p>
+<p>Vous pouvez lancer @Compendium[pf2e.spells-srd.O7ZEqWjwdKyo2CUv]{Éruption volcanique} comme un sort primordial inné de niveau 7 une fois par jour, sauf que vous ne pouvez invoquer le volcan que sur le fond d'une étendue d'eau et que les effets qui s'appliquent normalement aux créatures volantes s'appliquent aux créatures qui nagent à la place.</p>
