--- a/data/feats/ancestry-17-UquGIEFKhutgJsEz.htm
+++ b/data/feats/ancestry-17-UquGIEFKhutgJsEz.htm
@@ -6,10 +6,10 @@ PrereqFR: Marchepierre
 
 ------ Benefits and spoiler ----
 Benefits: Earthen barriers no longer impede your progress.
-Avantage: Les barrières de terre n'entravent plus votre progression.
+Avantage: Une fois par jour, vous pouvez lancer Passe-muraille au niveau 7 pour franchir la pierre ou la terre.
 
 ------ Description (en) ------
 <p>Earthen barriers no longer impede your progress. You gain @Compendium[pf2e.spells-srd.115Xp9E38CJENhNS]{Passwall} as a 7th-level divine innate spell that you can cast once per day. Unlike the spell, however, this ability can be used only to open passages through barriers of earth or stone.</p>
 ------ Description (fr) ------
 <p>Les obstacles en terre ne peuvent plus empêcher votre progression.</p>
-<p>Vous obtenez @Compendium[pf2e.spells-srd.115Xp9E38CJENhNS]{Passe muraille} comme un sort divin inné de niveau 7 que vous pouve lancer une fois par jour. Contrairement au sort, quoi qu'il en soit, cette capacité ne peut être utilisée que pour ouvrir des passages à travers des barrières de terre ou de pierre.</p>
+<p>Vous obtenez @Compendium[pf2e.spells-srd.115Xp9E38CJENhNS]{Passe muraille} comme un sort divin inné de niveau 7 que vous pouvez lancer une fois par jour. Contrairement au sort, quoi qu'il en soit, cette capacité ne peut être utilisée que pour ouvrir des passages à travers des barrières de terre ou de pierre.</p>
