--- a/data/feats/ancestry-17-WZC2XXQo6Pu2GQeo.htm
+++ b/data/feats/ancestry-17-WZC2XXQo6Pu2GQeo.htm
@@ -6,9 +6,9 @@ PrereqFR: Voler haut
 
 ------ Benefits and spoiler ----
 Benefits: Your wings grow stronger.
-Avantage: Vos ailes deviennent plus fortes.
+Avantage: Vous obtenez les effets de Voler haut tout le temps
 
 ------ Description (en) ------
 <p>Your wings grow stronger. You gain the effects of @Compendium[pf2e.feats-srd.Tl8yckXeTCHnwrlM]{Soaring Flight} at all times.</p>
 ------ Description (fr) ------
-<p>Vos ailes deviennent plus fortes. Vous obtenez les effets de @Compendium[pf2e.feats-srd.Tl8yckXeTCHnwrlM]{Voler haut} à tout moment.</p>
+<p>Vos ailes deviennent plus fortes. Vous obtenez les effets de @Compendium[pf2e.feats-srd.Tl8yckXeTCHnwrlM]{Voler haut} tout le temps.</p>
