--- a/data/feats/ancestry-17-Zl6vDXJEM7Lbp8JQ.htm
+++ b/data/feats/ancestry-17-Zl6vDXJEM7Lbp8JQ.htm
@@ -7,13 +7,13 @@ PrereqFR: Changer de forme avec une forme alternative de renard
 
 ------ Benefits and spoiler ----
 Benefits: Once per day, when you Change Shape into a fox, you can instead gain the effects of both the canine form of 5th-level animal form and 7th-level fiery body for 1 minute or until you shift back, whichever comes first.
-Avantage: Une fois par jour, lorsque vous vous transformez en renard, vous pouvez bénéficier des effets de la forme canine de la forme animale de 5e niveau et du corps ardent de 7e niveau pendant 1 minute ou jusqu'à ce que vous reveniez en arrière, selon la première éventualité.
+Avantage: Une fois par jour, vous obtenez les effets de la forme canine de Forme animale au niveau 5 et de Corps enflammé au niveau 7.
 
 ------ Description (en) ------
 <p>Once per day, when you Change Shape into a fox, you can instead gain the effects of both the canine form of 5th-level @Compendium[pf2e.spells-srd.wp09USMB3GIW1qbp]{Animal Form} and 7th-level @Compendium[pf2e.spells-srd.XS7Wyh5YC0NWeWyB]{Fiery Body} for 1 minute or until you shift back, whichever comes first. You can cast @Compendium[pf2e.spells-srd.O9w7r4BKgPogYDDe]{Produce Flame} from the <em>fiery body</em> effect even though you’re in a battle form.</p>
 <hr />
 <p><strong>Special</strong> If you are a frozen wind kitsune, your form is ice instead of fire. This changes the immunity and damage from the <em>fiery body</em> effect to cold, changes the weakness to fire, and changes produce flame to @Compendium[pf2e.spells-srd.gYjPm7YwGtEa1oxh]{Ray of Frost}.</p>
 ------ Description (fr) ------
-<p>Une fois par jour, lorsque vous @Compendium[pf2e.ancestryfeatures.Ymg6WqeJqOyLJLEr]{Changez de forme} pour adopter celle d'un renard, vous pouvez à la place obtenir les effets à la fois de forme canine de @Compendium[pf2e.spells-srd.wp09USMB3GIW1qbp]{Forme animale} de niveau 5 et de @Compendium[pf2e.spells-srd.XS7Wyh5YC0NWeWyB]{Corps enflammé} de niveau 7 pendant 1 minute ou jusqu'à ce que vous reveniez à votre forme normale, selon ce qui advient en premier. Vous pouvez lancer @Compendium[pf2e.spells-srd.O9w7r4BKgPogYDDe]{Flammes} de l'effet de corps enflammé même si vous êtes en une forme de bataille.</p>
+<p>Une fois par jour, lorsque vous @Compendium[pf2e.ancestryfeatures.Ymg6WqeJqOyLJLEr]{Changez de forme} pour adopter celle d'un renard, vous pouvez à la place obtenir les effets à la fois de la forme canine de @Compendium[pf2e.spells-srd.wp09USMB3GIW1qbp]{Forme animale} de niveau 5 et de @Compendium[pf2e.spells-srd.XS7Wyh5YC0NWeWyB]{Corps enflammé} de niveau 7 pendant 1 minute ou jusqu'à ce que vous reveniez à votre forme normale, selon ce qui advient en premier. Vous pouvez lancer @Compendium[pf2e.spells-srd.O9w7r4BKgPogYDDe]{Flammes} de l'effet de corps enflammé même si vous êtes dans une forme de bataille.</p>
 <hr />
 <p><strong>Spécial</strong> Si vous êtes un kitsune vent glacé, votre forme est de glace plutôt que de feu. Cela change l'immunité et les dégâts des effets du corps enflammé en froid, vous procure une faiblesse au feu et change Flammes en @Compendium[pf2e.spells-srd.gYjPm7YwGtEa1oxh]{Rayon de givre}.</p>
