--- a/data/equipment/consumable-12-jVmTtUeNxDZMP5dU.htm
+++ b/data/equipment/consumable-12-jVmTtUeNxDZMP5dU.htm
@@ -1,13 +1,12 @@
 Name: Potion of Acid Retaliation (Greater)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Potion de Riposte acide (supérieur)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact</p>
 <p>For 1 minute after drinking a potion of acid retaliation, you glow with a faint aura of acid energy, and a creature that touches you (such as by making an unarmed attack or using a spell with a range of touch against you) or is adjacent to you and hits you with a melee weapon strike takes acid damage.</p>
 <p>The aura deals 3d6 acid damage.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong>  <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span>  Interact</p> 
-<p>Pendant 1 minute après avoir bu une potion de représailles acides, vous rayonnez d'une faible aura d'énergie acide, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort à portée de toucher contre vous) ou qui est adjacente à vous et vous frappe avec une arme de mêlée subit des dégâts d'acide.</p> 
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
+<p>Pendant 1 minute après avoir bu une potion de Riposte acide, vous rayonnez d'une faible aura d'énergie acide, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort de contact) subit des dégâts d'acide.</p>
 L'aura inflige 3d6 points de dégâts d'acide.</p>
