--- a/data/equipment/consumable-01-apGQcVMSRprFEeKt.htm
+++ b/data/equipment/consumable-01-apGQcVMSRprFEeKt.htm
@@ -8,5 +8,5 @@ Nom: Potion de Riposte acide (mineur)
 <p>The aura deals 1 acid damage.</p>
 ------ Description (fr) ------
 <p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
-<p>Pendant 1 minute après avoir bu une potion de Riposte acide, vous rayonnez d'une faible aura d'énergie acide, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort à portée de toucher contre vous) subit des dégâts d'acide.</p>
+<p>Pendant 1 minute après avoir bu une potion de Riposte acide, vous rayonnez d'une faible aura d'énergie acide, et une créature qui vous touche (par exemple en effectuant une attaque à mains nues ou en utilisant un sort de contact) subit des dégâts d'acide.</p>
 L'aura inflige 1 dégât d'acide.</p>
