--- a/data/equipment/consumable-01-apGQcVMSRprFEeKt.htm
+++ b/data/equipment/consumable-01-apGQcVMSRprFEeKt.htm
@@ -1,5 +1,5 @@
 Name: Potion of Acid Retaliation (Minor)
-Nom: Potion de Riposte acide (mineur) 
+Nom: Potion de Riposte acide (mineure) 
 État: libre
 
 ------ Description (en) ------
