--- a/data/equipment/consumable-18-fabw5fDuaTMUF0tb.htm
+++ b/data/equipment/consumable-18-fabw5fDuaTMUF0tb.htm
@@ -1,5 +1,5 @@
 Name: Potion of Acid Retaliation (Major)
-Nom: Potion de Riposte acide (majeur)
+Nom: Potion de Riposte acide (majeure)
 État: libre
 
 ------ Description (en) ------
