--- a/data/equipment/consumable-01-CeKPffF0FaEyhLMp.htm
+++ b/data/equipment/consumable-01-CeKPffF0FaEyhLMp.htm
@@ -14,7 +14,7 @@ Nom: Poison de Grenouille-liane
 Une seule Grenouille-liane produit suffisamment de toxine pour fabriquer une dose de poison de grenouille-liane ;
 <hr />
 <p><strong>Activation</strong> <span class="pf2-icon">D</span> Interagir (Blessure)</p>
-<p><strong>Jet de sauvegarde</strong> DD 15 Force</p>
+<p><strong>Jet de sauvegarde</strong> DD 15 Vigueur
 <p><strong>Durée maximale</strong> 6 rounds</p>
 <p><strong>Stade 1</strong> [[/r 1d4#poison]] dégâts de poison (1 round)</p>
 <p><strong>Stade 2</strong> [[/r 1d6#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} 1 (1 round)</p>
