--- a/data/equipment/consumable-02-p3RduziOxQxtREg9.htm
+++ b/data/equipment/consumable-02-p3RduziOxQxtREg9.htm
@@ -16,7 +16,7 @@ Nom: Poison Torpeur du Pilleur
 Les pièges peuvent tenir en échec de nombreux voleurs, mais le poison connu sous le nom de Torpeur du Pilleur garantit qu'aucun voleur n'est assez fort pour partir avec les trésors volés. Généralement étalé sur les serrures, les coffres et même les objets de valeur, le poison sape lentement les forces de ceux qui le touchent. Les gardiens à proximité n'ont plus qu'à suivre la traînée d'objets de valeur abandonnés pour retrouver l'intrus affaibli.</p>
 <hr />
 <p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir (Contact)</p>
-<p><strong>Jet de sauvegarde</strong> DD 19 Force</p>
+<p><strong>Jet de sauvegarde</strong> DD 19 Vigueur</p>
 <p><strong>Début</strong> 1 minute</p>
 <p><strong>Durée maximale</strong> 1 heure</p>
 <p><strong>Stade 1</strong> réduire la limite de Vrac par 3 (1 minute)</p>
