--- a/data/equipment/consumable-17-M4ZOHOlne43ArjOC.htm
+++ b/data/equipment/consumable-17-M4ZOHOlne43ArjOC.htm
@@ -14,8 +14,10 @@ Nom:
 ------ Description (fr) ------
 <p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
 <hr />
-<p>Ta peau se couvre d'écailles coriaces comme celles d'un drake, ta vue devient aiguisée et tes pupilles fendues, et tes membres deviennent nerveux et rapides, mais ton esprit et tes réflexes deviennent lents.</p>
-<p><strong>Avantage</strong> Vous gagnez un bonus d'objet de +7 à la CA, un plafond de Dextérité de +2 (comme d'habitude, utilisez votre plafond de Dextérité le plus bas si vous en avez plus d'un), et un bonus d'objet de +4 aux tests de Perception. Si vous'portez une armure, vous calculez toujours votre bonus de compétence à la CA en fonction de votre compétence dans l'armure que vous portez, même si le mutagène drakeheart a un bonus d’article plus élevé. Vous gagnez également l'action @Compendium[pf2e.actionspf2e.EHa0owz6mccnmSBf]{Final Surge}.</p>
-<p><strong>Drawback</strong> Vous subissez une pénalité de -1 aux sauvegardes de Volonté, aux sauvegardes de Réflexe et à tous les tests de compétence de @Compendium[pf2e.actionspf2e.1OagaWtBpVXExToo]{Recall Knowledge}.</p>
-<p><strong>Durée</strong> 1 heure ou jusqu'à ce que vous utilisiez Final Surge, selon la première éventualité.</p>
-<p>@Compendium[pf2e.consumable-effects.vFOr2JAJxiVvvn2E]{Effet : Mutagène du cœur de Drake (Majeur)}</p>
+<p><p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
+<hr>
+<p>Votre peau se couvre d'écailles comme un drake, votre vision s'aiguise alors que vos pupilles sont fendues et vos membres deviennent secs et rapides, mais votre esprit et vos réflexes deviennent lents.</p>
+<p><strong>Avantage</strong> Vous obtenez un bonus d'objet de +7 à la CA, un maximum de Dextérité de +2 (comme d'habitude, vous utilisez votre plus faible maximum de Dextérité si vous en avez plus d'un) et un bonus d'objet de +4 aux tests de Perception. Si vous portez une armure, vous calculez toujours votre bonus de maîtrise à la CA en fonction de votre degré de maîtrise dans l'armure que vous portez, même si le mutagène de cœur de drake possède un bonus d'objet supérieur. Vous obtenez aussi l'action @Compendium[pf2e.actionspf2e.EHa0owz6mccnmSBf]{Impulsion finale}.</p>
+<p><strong>Inconvénient</strong> Vous subissez une pénalité de -1 aux jets de Volonté, aux jets de Réflexes et à tous les tests pour @Compendium[pf2e.actionspf2e.1OagaWtBpVXExToo]{Vous souvenir}.</p>
+<p><strong>Durée</strong> 1 minute ou jusqu'à ce que vous utilisiez Impulsion finale, selon ce qui se produit en premier.</p>
+<p>@Compendium[pf2e.spell-effects.GBBjw61g4ekJymT0]{Effet: Mutagène de cœur de drake (majeur)}</p>
