--- a/data/equipment/consumable-17-M4ZOHOlne43ArjOC.htm
+++ b/data/equipment/consumable-17-M4ZOHOlne43ArjOC.htm
@@ -1,7 +1,6 @@
 Name: Drakeheart Mutagen (Major)
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Mutagène de Coeur de drake (majeur)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
