--- a/data/equipment/consumable-18-vTEWlRBUD4VzVwxK.htm
+++ b/data/equipment/consumable-18-vTEWlRBUD4VzVwxK.htm
@@ -1,7 +1,6 @@
 Name: Applereed Mutagen (Greater)
-Nom: Mutgène Pousse-Roseau
-État: changé
-État d'origine: auto-trad
+Nom: Mutgène Pousse-Roseau (supérieur)
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
