--- a/data/equipment/consumable-18-vTEWlRBUD4VzVwxK.htm
+++ b/data/equipment/consumable-18-vTEWlRBUD4VzVwxK.htm
@@ -1,5 +1,5 @@
 Name: Applereed Mutagen (Greater)
-Nom: Mutgène Pousse-Roseau (supérieur)
+Nom: Mutagène Pousse-Roseau (supérieur)
 État: libre
 
 ------ Description (en) ------
