--- a/data/equipment/consumable-04-QJ1fTrX42PoEWpK5.htm
+++ b/data/equipment/consumable-04-QJ1fTrX42PoEWpK5.htm
@@ -1,7 +1,6 @@
 Name: Leadenleg
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Jambes de plomb
+État: libre
 
 ------ Description (en) ------
 <p>Once injected, this synthetic toxin sinks into the extremities, numbing them nearly to paralysis.</p>
@@ -15,9 +14,9 @@ Nom:
 ------ Description (fr) ------
 Une fois injectée, cette toxine synthétique pénètre dans les extrémités, les engourdissant presque jusqu'à la paralysie ;
 <hr />
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">2</span> Interact (Injury)</p>
-<p><strong>Jet de sauvegarde</strong> DC 20 Force</p>
+<p><strong>Activation</strong> <span class="pf2-icon">2</span> Interagir (Blessure)</p>
+<p><strong>Jet de sauvegarde</strong> DD 20 Vigueur</p>
 <p><strong>Durée maximale</strong> 6 rounds</p>
-<p><strong>Stade 1</strong> [[/r 1d10 #poison]] dégâts de poison et pénalité d'état de -5 pieds à toutes les vitesses (1 round)</p>
-<p><strong>Stade 2</strong> [[/r 2d6 #poison]] dégâts de poison et pénalité d'état de -10 pieds à toutes les vitesses (1 round)</p>
-<p><strong>Stade 3</strong> [[/r 2d6 #poison]] dégâts de poison et pénalité d'état de -20 pieds à toutes les vitesses (1 round)</p>
+<p><strong>Stade 1</strong> [[/r 1d10 #poison]] points de dégâts de poison et pénalité d'état de -1,5 mètres à toutes les vitesses (1 round)</p>
+<p><strong>Stade 2</strong> [[/r 2d6 #poison]] points de dégâts de poison et pénalité d'état de -3 mètres à toutes les vitesses (1 round)</p>
+<p><strong>Stade 3</strong> [[/r 2d6 #poison]] moints de dégâts de poison et pénalité d'état de -6 mètres à toutes les vitesses (1 round)</p>
